fixed spacing bug

--- a/css/codingdavinci.css
+++ b/css/codingdavinci.css
@@ -1216,7 +1216,7 @@ height: 100%;
   margin-top: 0.6em;
 }
 
-.project-tile > img {
+.project-tile  img {
   height : 10em;
 }
 
